--- a/foundry.toml
+++ b/foundry.toml
@@ -6,6 +6,6 @@ ffi = true
 evm_version = "shanghai"
 # lots of foundry tests default to paris
 
-remappings = ['foundry-huff/=lib/foundry-huff/src/']
+remappings = ['foundry-huff/=lib/foundry-huff/src/', "@openzeppelin/=lib/openzeppelin-contracts/contracts/"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
